k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec: 
  type: ClusterIP
  # pod that this cluster ip service provides access to
  selector:
    component: web
  ports: 
    # port that exposed to other objects
    - port: 3000
      # port that hosts inside running container that is to be accessed
      targetPort: 3000
