k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec: 
  type: ClusterIP
  # pod that this cluster ip service provides access to
  selector:
    component: postgres
  ports: 
    # port that exposed to other objects
    - port: 5432
      # port that hosts inside running container that is to be accessed
      targetPort: 5432
