k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec: 
  type: ClusterIP
  # pod that this cluster ip service provides access to
  selector:
    component: server
  ports: 
    # port that exposed to other objects
    - port: 5000
      # port that hosts inside running container that is to be accessed
      targetPort: 5000
